# -*- mode: Makefile; tab-width: 4; indent-tabs-mode: 1; st-rulers: [70] -*-
# vim: ts=8 sw=8 ft=Makefile noet
# 
# Copyright (c) 2015 Pagoda Box Inc
# 
# This Source Code Form is subject to the terms of the Mozilla Public License, v.
# 2.0. If a copy of the MPL was not distributed with this file, You can obtain one
# at http://mozilla.org/MPL/2.0/.
# 

bin_PROGRAMS = red

red_SOURCES =  \
	cmd/add-ip.c cmd/add-ip.h \
	cmd/remove-ip.c cmd/remove-ip.h \
	cmd/show-ip.c cmd/show-ip.h \
	cmd/add-node.c cmd/add-node.h \
	cmd/remove-node.c cmd/remove-node.h \
	cmd/show-node.c cmd/show-node.h \
	cmd/ping.c cmd/ping.h \
	cmd/status.c cmd/status.h \
	ip.c ip.h \
	node.c node.h \
	util/adlist.c util/adlist.h \
	util/sds.c util/sds.h \
	redd.c redd.h \
	red.c red.h
